--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,20 @@
         </plugins>
     </build>
 
+    <properties>
+        <slf4J.log4j.version>1.7.19</slf4J.log4j.version>
+    </properties>
+
+    <!-- Slf4J with latest log4J version 1.2 -->
+    <!-- details: http://www.slf4j.org/manual.html#libraries -->
+    <dependencies>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>${slf4J.log4j.version}</version>
+    </dependency>
+    </dependencies>
+
     <modules>
         <module>common</module>
         <module>java-server</module>
