--- a/java-client/pom.xml
+++ b/java-client/pom.xml
@@ -116,6 +116,12 @@
             <version>${com.fasterxml.jackson.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>de.kacperbak</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 
