--- a/java-server/pom.xml
+++ b/java-server/pom.xml
@@ -66,6 +66,12 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>de.kacperbak</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
