simple hack to create 100 connections

--- a/java-server/src/main/resources/application.properties
+++ b/java-server/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8080
+org.apache.tomcat.websocket.textBufferSize=20971520
+org.apache.tomcat.websocket.binaryBufferSize=20971520
 #server.ssl.key-store=classpath:keystore.jks
 #server.ssl.key-store-password=secret
 #server.ssl.key-password=another-secret
